<resources>
    <string name="app_name">VODNET</string>

    <string name="facebook_app_id">1634729096617037</string>
    <string name="facebook_login_protocol_scheme">fb1634729096617037</string>

    <!-- POZYCJE MENU -->

    <string name="menuItem1">Jeden</string>
    <string name="menuItem2">Dwa</string>
    <string name="menuItem3">Trzy</string>
    <!-- ____________ -->

    <string name="wzrost_label">Podaj wzrost</string>
    <string name="waga_label">Podaj wagę</string>
    <string name="wiek_label">Podaj wiek</string>
    <string name="przycisk_akceptuj_dane">Akceptuj dane</string>
    <string name="title_activity_button_game">ButtonGameActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_start">Start!</string>
    <string name="trafienia">Ilość trafień:</string>
    <string name="pozostalo_sekund">Pozostało sekund:</string>
    <string name="zacznij_test">Zacznij test!</string>
    <string name="dynamiczny_przycisk">Kliknij!</string>
    <string name="restApiUrl">http://10.0.2.2:5000/</string>

    <string name="tab_menu_panel_uzytkownika">Użytkownik</string>
    <string name="tab_menu_testy">Testy</string>
    <string name="tab_menu_impreza">Impreza</string>
    <string name="tab_menu_wyloguj">Wyloguj</string>
    <string name="tab_menu_statystyki">statystyki</string>

    <string name="Home">Home</string>
    <string name="testy_button">Testy</string>
    <string name="Profil">Profil</string>
    <string name="Imprezy">Imprezy</string>
    <string name="Historia">Historia</string>
    <string name="Wyloguj">Wyloguj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ile_wypiles">Ok! Ile wypiłeś?</string>
    <string name="kiedy_wypiles">Kiedy wypiłeś?</string>
    <string name="zacznij_gre">Gotowe, zaczynam!</string>
    <string name="anuluj_gre">Eee, nie</string>

    <string name="Profile">Profil</string>
    <string name="Party">Imprezy</string>
    <string name="Tests">Testy</string>
    <string name="History">Historia</string>
    <string name="Logout">Wyloguj</string>
    <string name="Settings">Ustawienia</string>
    <string name="title_activity_navigation_drawer">Chuchnij</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="navigation_drawer">navigation_drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wejdz_bez_logowania">Wejdź bez logowania</string>
    <string name="mezczyzna">Mężczyzna</string>
    <string name="kobieta">Kobieta</string>
    <string name="plec">Płeć</string>

    <string-array name="themes">
        <item>Theme1</item>
        <item>Theme2</item>
    </string-array>

</resources>
