<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/oval_button"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_party"
            android:icon="@drawable/oval_button"
            android:title="@string/Party" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/oval_button"
            android:title="@string/Tests" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/oval_button"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/oval_button"
            android:title="@string/Settings"/>
    </group>
</menu>
