<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uwm.wmii.student.michal.itmproj.MainActivity">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TabItem
            android:id="@+id/userTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_menu_panel_uzytkownika" />

        <android.support.design.widget.TabItem
            android:id="@+id/statsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_menu_statystyki" />

    </android.support.design.widget.TabLayout>

    <Button
        android:id="@+id/testyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="18dp"
        android:layout_marginBottom="0dp"
        android:hapticFeedbackEnabled="false"
        android:text="@string/testy_button"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent" />

</RelativeLayout>
