<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uwm.wmii.student.michal.itmproj.Fragments.ProfileFragment">

    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/wiek_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wiek_label"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/wzrost_input"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/wzrost_label"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/waga_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/waga_label"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/akceptuj_dane_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/przycisk_akceptuj_dane" />
    </RelativeLayout>

</FrameLayout>
